@@ -1,6 +1,7 @@
 2021-11-07  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/rlgl_compute_shader.rb: Added
+	* examples/models_billboard.rb: Added
 
 2021-11-06  vaiorabbit  <http://twitter.com/vaiorabbit>
 
